[package]
name = "wareki-conv"
version = "0.1.0"
edition = "2021"
description = "Converts Wareki (JIS X 0301) based date into ISO 8601 based one"
authors = ["kv5h"]
repository = "https://github.com/kv5h/wareki-conv"
license = "MIT"
readme = "README.md"
keywords = ["jis-x-0301", "wareki", "calendar", "iso8601", "date"]
categories = ["parsing","command-line-utilities"]

[dependencies]
chrono = "0.4.34"
log = "0.4.20"
regex = "1.10.3"
unicode-jp = "0.4.0"
